# Todo

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260122072328_create_todo_table.sql
src/: main.rs
src/handlers/: mod.rs
src/handlers/todo/: delete.rs  get.rs  mod.rs  model.rs  patch.rs  post.rs  put.rs
src/repository/: conf.rs  methods.rs  mod.rs  models.rs
src/service/: todo.rs
static/: index.html
