[package]
name = "rest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"]}
serde = {version = "1.0.228", features = ["derive", "std"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"]}
tower-http = {version = "0.6.8", features = ["fs"]}
