[package]
name = "rest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"]}
chrono = {version = "0.4.43", features = ["serde"]}
dotenv = "0.15.0"
serde = {version = "1.0.228", features = ["derive", "std"]}
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = [ "runtime-tokio-rustls", "tls-rustls", "mysql", "chrono", "uuid", "migrate" ]}
thiserror = "2.0.18"
tokio = {version = "1.49.0", features = ["full"]}
tower-http = {version = "0.6.8", features = ["fs"]}

[profile.dev.package.sqlx-macros]
opt-level = 3
